--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
   <title>Lab 2</title>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" media="screen" href="css/reset.css"/>
+  <link rel="stylesheet" media="screen" href="css/screen.css"/>
 </head>
-<body>
+<body>  
+  <div>
+    <h1>ITMD 362 Lab 2</h1>
+    <p><strong>Author: Gabi Bartolo</strong></p>
+  </div>
+  <form>
+    <label for="fname">Email Address</label><br>
+    <input type="text" id="fname" name="fname" ><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname" >
 
+  </form>
 </body>
 </html>
