--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
   <link rel="stylesheet" media="screen" href="css/screen.css"/>
 </head>
 <body>  
-  <div>
-    <h1>ITMD 362 Lab 2</h1>
-    <p><strong>Author: Gabi Bartolo</strong></p>
+  <div id="header">
+    <h1>ITMD 362: Lab 2</h1>
+    <h3>Author: Gabi Bartolo</h3>
   </div>
-  <form>
-    <label for="fname">Email Address</label><br>
-    <input type="text" id="fname" name="fname" ><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" >
-
-  </form>
+  <div id="form">
+    <form action="README.md" method="get" autocomplete="on">
+      <label>Email Address:</label><br>
+      <input size="70" type="text" id="email" name="email" placeholder="email.address@email.com" ><br>
+      <label for="phone">Phone Number:</label><br>
+      <input size="70" type="text" id="phone" name="phone" placeholder="(111)-111-1111"><br>
+      <label for="dob">Date of Birth:</label><br>
+      <input size="70" type="date" id="dob" name="dob"><br>
+      <input type="submit" id="submit">
+    </form>
+  </div>
 </body>
 </html>
