--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>  
   <h1>ITMD 362: Lab 2</h1>
-  <div id="form">
-    <form action="README.md" method="get" autocomplete="on">
+  <dialog open>
+    <form action="#null" method="dialog" autocomplete="on">
       <label>Email Address:</label><br>
       <input size="70" type="text" id="email" name="email" placeholder="email.address@email.com" ><br>
       <label for="phone">Phone Number:</label><br>
       <input size="70" type="text" id="phone" name="phone" placeholder="(111)-111-1111"><br>
       <label for="dob">Date of Birth:</label><br>
       <input size="70" type="date" id="dob" name="dob"><br>
-      <input type="submit" id="submit">
+      <input type="submit" onclick="return confirm('Thank you for submiting')">
     </form>
-  </div>
+  </dialog close>
 </body>
 </html>
