--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <input size="70" type="date" id="dob" name="dob"><br>
       <input type="submit" onclick="return confirm('Thank you for submiting')">
     </form>
-  </dialog close>
+  </dialog>
 </body>
 </html>
